--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@ Ministry of Health and Family Welfare						</div>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-79672f6 elementor-widget elementor-widget-text-editor" data-id="79672f6" data-element_type="widget" data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					Upazila Health Complex, Rowmari						</div>
+					Upazila Health Complex, Delduar						</div>
 				</div>
 					</div>
 		</div>
@@ -1109,7 +1109,7 @@ Ministry of Health and Family Welfare						</div>
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-7fda498 elementor-widget elementor-widget-text-editor" data-id="7fda498" data-element_type="widget" data-settings="{&quot;ekit_we_effect_on&quot;:&quot;none&quot;}" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-					Upazila Health Complex, Rowmari					</div>
+					Upazila Health Complex, Delduar					</div>
 				</div>
 					</div>
 		</div>
